dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/connect.c)

AM_INIT_AUTOMAKE(prozilla, 1.3.6)
AM_CONFIG_HEADER(config.h)
dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Replace `main' with a function in -lpthread:
AC_CHECK_LIB(pthread, pthread_create,, AC_MSG_ERROR([** The pthread library is not installed.**]))

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(ncurses.h curses.h strings.h malloc.h sys/time.h unistd.h sys/types.h sys/socket.h)
dnl Checks for ncurses library.
AC_CHECK_LIB(ncurses, initscr, initscr=on, initscr=off)
  if (test $initscr = on) then
    CURSLIB="ncurses"
    LIBS="-l$CURSLIB $LIBS"
    AC_DEFINE(HAVE_LIBNCURSES)
    AC_DEFINE(HAVE_CURSES)
  else
    AC_CHECK_LIB(curses, initscr, initscr=on, initscr=off)
    if (test $initscr = on) then
      CURSLIB="curses"
      LIBS="-l$CURSLIB $LIBS"
      AC_DEFINE(HAVE_LIBCURSES)
      AC_DEFINE(HAVE_CURSES)
    fi
fi

if (test $initscr = off) then
AC_MSG_ERROR([**A (n)curses library was not found. The program needs ncurses to run **])
fi

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
TYPE_SOCKLEN_T
 
dnl Checks for library functions.
AC_FUNC_SETVBUF_REVERSED
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(gettimeofday select socket strdup strerror strstr)

AC_caolan_FUNC_WHICH_GETHOSTBYNAME_R

AC_OUTPUT(src/Makefile man/Makefile Makefile)


